add ui for composing messages

--- a/step_mine/pubspec.yaml
+++ b/step_mine/pubspec.yaml
@@ -1,5 +1,6 @@
 name: step_mine
 description: My flutter firechat codelab Implementation
+uses-material-design: true
 dependencies:
   flutter:
     path: ../../../flutter/packages/flutter
